--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,5 @@ set(GCC_COVERAGE_COMPILE_FLAGS "-c -fmessage-length=0 –ansi -Wall -O3 -Wextra 
 add_library(gurobi801 SHARED IMPORTED)
 set_target_properties(gurobi801 PROPERTIES IMPORTED_LOCATION "/Library/gurobi801/mac64/lib/libgurobi80.so")
 
-add_executable(sudoku main.c Solver.c Solver.h Game.c Game.h Parser.c Parser.h MainAux.c MainAux.h List.c List.h Exceptions.c Exceptions.h gurobi_c.h GameAux.c GameAux.h)
+add_executable(sudoku main.c Solver.c Solver.h Game.c Game.h Parser.c Parser.h MainAux.c MainAux.h List.c List.h Exceptions.c Exceptions.h GameAux.c GameAux.h)
 
